Revert "title change at bio"
This reverts commit 3e59fa6c40eef4d46c103369d24accf19d10413b.

--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Eugenia Maria Azevedo Salomao | Biografía</title>
+  <title>Eugenia Azevedo Salomao | Biografía</title>
   <link rel="icon" href="img/favicon.ico">
 </head>
 
