--- a/bio.html
+++ b/bio.html
@@ -5,9 +5,15 @@
   <meta charset="utf-8">
   <title>Eugenia Azevedo Salomao | Biografía</title>
   <link rel="icon" href="img/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body id="bio">
 
   <header>
     <div>
@@ -297,7 +303,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="bio.html" target="_blank">Biografía</a></li>
+          <li><a href="bio.html">Biografía</a></li>
           <li><a href="publicaciones.html">Publicaciones</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
@@ -450,7 +456,7 @@
             </ul>
           </div>
         </div>
-        <a href="files/CV.pdf" target="_blank">Descargar CV</a>
+        <a href="files/CV.pdf" target="_blank" class="primary-button">Descargar CV</a>
 
 
       </div>
@@ -462,7 +468,7 @@
       <h1>Ponte en contacto</h1>
       <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel: +524435285057">+52 4435285057.</a></p>
       <div class="Mail-button">
-        <a href="mailto:eazevedosa@yahoo.com.mx">Mandar email</a>
+        <a href="mailto:eazevedosa@yahoo.com.mx" class="primary-button">Mandar email</a>
       </div>
       <div class="social-media">
         <a href="linkedin-url">
