--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Eugenia Azevedo Salomao | Biografía</title>
+  <title>Eugenia | Biografía</title>
   <link rel="icon" href="img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -218,155 +218,155 @@
 
   <main>
     <div class="container">
-    <div class="content">
-      <div>
-        <h1>Dra. Eugenia Maria Azevedo Salomao</h1>
-        <h2>Biografía</h2>
-        <div class="Grid">
+      <div class="content">
+        <div>
+          <h1>Dra. Eugenia Maria Azevedo Salomao</h1>
+          <h2 class="margin-bottom">Biografía</h2>
+          <div class="row2">
+            <div class="col-md-6_2">
+              <p class="no-margin">Arquitecta egresada de la Universidad Federal de Bahía, Brasil (1980), Maestra en Arquitectura con especialidad en Restauración de Monumentos por el Centro Churubusco, INAH, México (1981), Doctora en Arquitectura por la UNAM, México
+                (1999), con mención honorífica.</p>
+              <p>Profesora e investigadora titular “C” de tiempo completo de la Universidad Michoacana de San Nicolás de Hidalgo (UMSNH), México, de 1983 a la fecha, adscrita a la Facultad de Arquitectura.</p>
+              <p>Miembro del cuerpo académico consolidado “Arquitectura, ciudad y patrimonio” UMICH-CA-35. Miembro del Sistema Nacional de Investigadores nivel II, donde tiene registradas sus publicaciones entre capítulos de libros, libros,
+                coordinación de publicaciones, artículos, paquetes didácticos, así como los recursos humanos formados.</p>
+            </div>
+            <div class="col-md-6_2">
+              <picture>
+                <source srcset="img/bio/Bio_@1x.jpg" media="(max-width:767px)">
+                <img src="img/bio/Bio_@2x.jpg" alt="Eugenia Azevedo Salomao foto">
+              </picture>
+            </div>
+          </div>
           <div>
-            <p>Arquitecta egresada de la Universidad Federal de Bahía, Brasil (1980), Maestra en Arquitectura con especialidad en Restauración de Monumentos por el Centro Churubusco, INAH, México (1981), Doctora en Arquitectura por la UNAM, México
-              (1999), con mención honorífica.</p>
-            <p>Profesora e investigadora titular “C” de tiempo completo de la Universidad Michoacana de San Nicolás de Hidalgo (UMSNH), México, de 1983 a la fecha, adscrita a la Facultad de Arquitectura.</p>
-            <p>Miembro del cuerpo académico consolidado “Arquitectura, ciudad y patrimonio” UMICH-CA-35. Miembro del Sistema Nacional de Investigadores nivel II, donde tiene registradas sus publicaciones entre capítulos de libros, libros,
-              coordinación de publicaciones, artículos, paquetes didácticos, así como los recursos humanos formados.</p>
+            <h2 class="bio">Líneas de investigación</h2>
+            <ul>
+              <p class="list">Historia de la arquitectura y del urbanismo: habitabilidad del espacio urbano-arquitectónico</p>
+              <p class="list">Lectura morfológica del espacio: territorio, asentamientos humanos y arquitectura</p>
+              <p class="list">Conservación del patrimonio urbano-arquitectónico: aspectos teórico-históricos, rehabilitación de la arquitectura y sitios históricos</p>
+              <p class="list">Asimismo, ha incursionado en el campo de los procesos de acreditación en la disciplina de la arquitectura y disciplinas del espacio habitable, con la producción de conferencias y ponencias y la realización de informes
+                técnicos de los
+                procesos de acreditación realizados.</p>
+            </ul>
           </div>
           <div>
-            <picture>
-              <source srcset="img/bio/Bio_@1x.jpg" media="(max-width:767px)">
-              <img src="img/bio/Bio_@2x.jpg" alt="Eugenia Azevedo Salomao foto">
-            </picture>
-          </div>
-        </div>
-        <div>
-          <h2>Líneas de investigación</h2>
-          <ul>
-            <p>Historia de la arquitectura y del urbanismo: habitabilidad del espacio urbano-arquitectónico</p>
-            <p>Lectura morfológica del espacio: territorio, asentamientos humanos y arquitectura</p>
-            <p>Conservación del patrimonio urbano-arquitectónico: aspectos teórico-históricos, rehabilitación de la arquitectura y sitios históricos</p>
-            <p>Asimismo, ha incursionado en el campo de los procesos de acreditación en la disciplina de la arquitectura y disciplinas del espacio habitable, con la producción de conferencias y ponencias y la realización de informes técnicos de los
-              procesos de acreditación realizados.</p>
-          </ul>
-        </div>
-        <div>
-          <h2>Cargos adminisatrativos</h2>
-          <div class="Grid">
-            <div class="row">
-              <div>
-                <p>2007 - a la fecha</p>
+            <h2 class="bio">Cargos adminisatrativos</h2>
+            <div class="Grid">
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>2007 - a la fecha</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Coordinadora de la Oficina de seguimiento y mejora continua de la Facultad de Arquitectura de la UMSNH de septiembre de 2007 a la fecha.</p>
+                </div>
               </div>
-              <div>
-                <p>Coordinadora de la Oficina de seguimiento y mejora continua de la Facultad de Arquitectura de la UMSNH de septiembre de 2007 a la fecha.</p>
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>2014 - 2017</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Coordinadora del programa de doctorado PIDA (Programa Interinstitucional de Doctorado en Arquitectura en la UMSNH) de 2014 a 2017.</p>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>2014 - 2017</p>
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>2002 - 2006</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Coordinadora de la comisión para el diseño del Programa Interinstitucional de Doctorado en Arquitectura, en la UMSNH, programa que tuvo su inicio en 2002; representante y responsable del programa en la Universidad Nicolaíta de
+                    2002
+                    a octubre de 2006.</p>
+                </div>
               </div>
-              <div>
-                <p>Coordinadora del programa de doctorado PIDA (Programa Interinstitucional de Doctorado en Arquitectura en la UMSNH) de 2014 a 2017.</p>
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>1995 - 2006</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Responsable del proyecto para la instauración de la Maestría en Arquitectura, Investigación y Restauración de Sitios y Monumentos y de la Especialidad en Restauración de Sitios y Monumentos, cuyos estudios se iniciaron en 1995,
+                    siendo nombrada Jefe de la División de Estudios de Posgrado de 1995 a enero de 2006. </p>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>2002 - 2006</p>
-              </div>
-              <div>
-                <p>Coordinadora de la comisión para el diseño del Programa Interinstitucional de Doctorado en Arquitectura, en la UMSNH, programa que tuvo su inicio en 2002; representante y responsable del programa en la Universidad Nicolaíta de 2002
-                  a octubre de 2006.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>1995 - 2006</p>
-              </div>
-              <div>
-                <p>Responsable del proyecto para la instauración de la Maestría en Arquitectura, Investigación y Restauración de Sitios y Monumentos y de la Especialidad en Restauración de Sitios y Monumentos, cuyos estudios se iniciaron en 1995,
-                  siendo nombrada Jefe de la División de Estudios de Posgrado de 1995 a enero de 2006. </p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>1986 - 1988</p>
-              </div>
-              <div>
-                <p>Secretaria académica de la Escuela de Arquitectura de UMSNH.</p>
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>1986 - 1988</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Secretaria académica de la Escuela de Arquitectura de UMSNH.</p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div>
-          <h2>Práctica profesional</h2>
-          <div class="Grid">
-            <div class="row">
-              <div>
-                <p>1983 - a la fecha</p>
+          <div>
+            <h2 class="bio">Práctica profesional</h2>
+            <div class="Grid">
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>1983 - a la fecha</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Asesoría en trabajos de restauración y rehabilitación del patrimonio edificado.</p>
+                </div>
               </div>
-              <div>
-                <p>Asesoría en trabajos de restauración y rehabilitación del patrimonio edificado.</p>
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>1985 - 1986</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Colaboración en los trabajos realizados para el Catálogo de Sitios y Monumentos de Pátzcuaro y Región Lacustre, bajo la coordinación de Esperanza Ramírez Romero, Michoacán, México.</p>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>1985 - 1986</p>
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>1980 - 1982</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Coordinadora del Modelo Reducido de la Ciudad de Salvador, Prefectura Municipal de Salvador, Bahía 1980-1982. Secretaría de Industria y Comercio, proyecto para el Distrito Industrial Urbano de Salvador, Bahía.</p>
+                </div>
               </div>
-              <div>
-                <p>Colaboración en los trabajos realizados para el Catálogo de Sitios y Monumentos de Pátzcuaro y Región Lacustre, bajo la coordinación de Esperanza Ramírez Romero, Michoacán, México.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>1980 - 1982</p>
-              </div>
-              <div>
-                <p>Coordinadora del Modelo Reducido de la Ciudad de Salvador, Prefectura Municipal de Salvador, Bahía 1980-1982. Secretaría de Industria y Comercio, proyecto para el Distrito Industrial Urbano de Salvador, Bahía.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>1980</p>
-              </div>
-              <div>
-                <p>Despacho de arquitectura y urbanismo del Arq. Assis Reis, Salvador, Bahía, Brasil de enero a julio de 1980.</p>
+              <div class="row3">
+                <div class="col-md-3">
+                  <p>1980</p>
+                </div>
+                <div class="col-md-9">
+                  <p>Despacho de arquitectura y urbanismo del Arq. Assis Reis, Salvador, Bahía, Brasil de enero a julio de 1980.</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <h2>Docencia y formación de recursos humanos</h2>
+        <h2 class="bio">Docencia y formación de recursos humanos</h2>
         <p>Ha impartido cursos a nivel licenciatura, diplomados y posgrado (especialidad, maestría y doctorado) sobre arquitectura, restauración y conservación del patrimonio edificado, historia de la arquitectura y urbanismo en su institución, así
           como en otras del país y del extranjero. Ha dirigido varias tesis tanto a nivel licenciatura como de posgrado (especialidad, maestría y doctorado).</p>
-        <div class="row">
-          <div class="column">
-            <h2>Premios</h2>
-            <ul>
-              <li>Miembro de la Comisión Dictaminadora del Área de Humanidades del Sistema Nacional de Investigadores del CONACyT, a partir del 14 de julio de 2021.</li>
-              <li>Beca CONACyT en el marco de la convocatoria de “Apoyos para estancias sabáticas vinculadas a la consolidación de grupos de investigación y/o el fortalecimiento del posgrado nacional” (septiembre 2017/febrero 2018).</li>
-              <li>Miembro de la Comisión Académica de la Asociación de Instituciones de la Enseñanza de la Arquitectura de la República Mexicana, A.C. (ASINEA) desde 2014 a la fecha.</li>
-              <li>Evaluadora de los procesos de acreditación COMAEA, ahora ANPADEH (Acreditadora Nacional de Programas de Arquitectura y Disciplina del Espacio Habitable) desde 2004, a nivel nacional e internacional. Miembro del Comité Técnico de la
-                ANPADEH (Acreditadora 3 Nacional de Programas de Arquitectura y Disciplina del Espacio Habitable)-COPAES, desde 2011 a la fecha.</li>
-              <li>Miembro del cuerpo académico consolidado con vigencia indefinida “Arquitectura, ciudad y patrimonio UMSNH-CA-35)”.</li>
-              <li>Perfil PRODEP, desde 1999 con vigencia hasta 2021. Sistema Nacional de Investigadores: Nivel I (1° de julio de 2002 al 30 de junio de 2005); Nivel II (1° de enero de 2006 al 31 de diciembre de 2009), Nivel II (1° de enero de 2009 al
-                31 de diciembre de 2014), Nivel II (1° de enero de 2015 al 31 de diciembre de 2019); Nivel II (1°de enero de 2020 al 31 de diciembre de 2024).</li>
-            </ul>
+        <div class="row2">
+          <div class="col-md-6">
+            <h2 class="bio">Premios</h2>
+            <p>Miembro de la Comisión Dictaminadora del Área de Humanidades del Sistema Nacional de Investigadores del CONACyT, a partir del 14 de julio de 2021.</p>
+            <p>Beca CONACyT en el marco de la convocatoria de “Apoyos para estancias sabáticas vinculadas a la consolidación de grupos de investigación y/o el fortalecimiento del posgrado nacional” (septiembre 2017/febrero 2018).</p>
+            <p>Miembro de la Comisión Académica de la Asociación de Instituciones de la Enseñanza de la Arquitectura de la República Mexicana, A.C. (ASINEA) desde 2014 a la fecha.</p>
+            <p>Evaluadora de los procesos de acreditación COMAEA, ahora ANPADEH (Acreditadora Nacional de Programas de Arquitectura y Disciplina del Espacio Habitable) desde 2004, a nivel nacional e internacional. Miembro del Comité Técnico de la
+              ANPADEH (Acreditadora 3 Nacional de Programas de Arquitectura y Disciplina del Espacio Habitable)-COPAES, desde 2011 a la fecha.</p>
+            <p>Miembro del cuerpo académico consolidado con vigencia indefinida “Arquitectura, ciudad y patrimonio UMSNH-CA-35)”.</p>
+            <p>Perfil PRODEP, desde 1999 con vigencia hasta 2021. Sistema Nacional de Investigadores: Nivel I (1° de julio de 2002 al 30 de junio de 2005); Nivel II (1° de enero de 2006 al 31 de diciembre de 2009), Nivel II (1° de enero de 2009 al
+              31 de diciembre de 2014), Nivel II (1° de enero de 2015 al 31 de diciembre de 2019); Nivel II (1°de enero de 2020 al 31 de diciembre de 2024).</p>
+
           </div>
-          <div class="column">
-            <h2>Distinciones</h2>
-            <ul>
-              <li>Miembro de la Comisión Dictaminadora del Área de Humanidades del Sistema Nacional de Investigadores del CONACyT, a partir del 14 de julio de 2021.</li>
-              <li>Beca CONACyT en el marco de la convocatoria de “Apoyos para estancias sabáticas vinculadas a la consolidación de grupos de investigación y/o el fortalecimiento del posgrado nacional” (septiembre 2017/febrero 2018).</li>
-              <li>Miembro de la Comisión Académica de la Asociación de Instituciones de la Enseñanza de la Arquitectura de la República Mexicana, A.C. (ASINEA) desde 2014 a la fecha.</li>
-              <li>Evaluadora de los procesos de acreditación COMAEA, ahora ANPADEH (Acreditadora Nacional de Programas de Arquitectura y Disciplina del Espacio Habitable) desde 2004, a nivel nacional e internacional. Miembro del Comité Técnico de la
-                ANPADEH (Acreditadora 3 Nacional de Programas de Arquitectura y Disciplina del Espacio Habitable)-COPAES, desde 2011 a la fecha.</li>
-              <li>Miembro del cuerpo académico consolidado con vigencia indefinida “Arquitectura, ciudad y patrimonio UMSNH-CA-35)”.</li>
-              <li>Perfil PRODEP, desde 1999 con vigencia hasta 2021. Sistema Nacional de Investigadores: Nivel I (1° de julio de 2002 al 30 de junio de 2005); Nivel II (1° de enero de 2006 al 31 de diciembre de 2009), Nivel II (1° de enero de 2009 al
-                31 de diciembre de 2014), Nivel II (1° de enero de 2015 al 31 de diciembre de 2019); Nivel II (1°de enero de 2020 al 31 de diciembre de 2024).</li>
-            </ul>
+          <div class="col-md-6">
+            <h2 class="bio">Distinciones</h2>
+            <p>Miembro de la Comisión Dictaminadora del Área de Humanidades del Sistema Nacional de Investigadores del CONACyT, a partir del 14 de julio de 2021.</p>
+            <p>Beca CONACyT en el marco de la convocatoria de “Apoyos para estancias sabáticas vinculadas a la consolidación de grupos de investigación y/o el fortalecimiento del posgrado nacional” (septiembre 2017/febrero 2018).</p>
+            <p>Miembro de la Comisión Académica de la Asociación de Instituciones de la Enseñanza de la Arquitectura de la República Mexicana, A.C. (ASINEA) desde 2014 a la fecha.</p>
+            <p>Evaluadora de los procesos de acreditación COMAEA, ahora ANPADEH (Acreditadora Nacional de Programas de Arquitectura y Disciplina del Espacio Habitable) desde 2004, a nivel nacional e internacional. Miembro del Comité Técnico de la
+              ANPADEH (Acreditadora 3 Nacional de Programas de Arquitectura y Disciplina del Espacio Habitable)-COPAES, desde 2011 a la fecha.</p>
+
           </div>
         </div>
-        <a href="files/CV.pdf" target="_blank" class="primary-button">Descargar CV</a>
 
-
+        <div class="button-container2">
+          <div class="center-button">
+            <a href="files/CV.pdf" target="_blank" class="primary-button">Descargar CV</a>
+          </div>
+        </div>
       </div>
-    </div>
     </div>
   </main>
 
@@ -374,13 +374,13 @@
     <div class="hero" id="Hero">
       <picture class="hero-image">
         <source srcset="img/footer_@1x.jpg" media="(max-width:560px)">
-        <source srcset="img/footer_@2x.jpg" media="(max-width:767px)">
+        <source srcset="img/footer_@2x.jpg" media="(max-width:768px)">
         <img src="img/footer_@3x.jpg" alt="footer image">
       </picture>
     <div class="hero-text">
       <h1>Ponte en contacto</h1>
       <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel: +524435285057">+524435285057.</a></p>
-      <div class="button-container">
+      <div class="button-container2">
         <div class="center-button">
           <a href="mailto:eazevedosa@yahoo.com.mx" target="_blank" class="primary-button">Mandar email</a>
         </div>
