--- a/bio.html
+++ b/bio.html
@@ -237,12 +237,14 @@
                 coordinación de publicaciones, artículos, paquetes didácticos, así como los recursos humanos formados.</p>
             </div>
             <div class="col-md-6_2">
-              <picture>
-                <a href="img/bio/Bio_@2x.jpg" data-lightbox="Bio_@2x.jpg">
-                  <source srcset="img/bio/Bio_@1x.jpg" media="(max-width:767px)">
-                  <img src="img/bio/Bio_@2x.jpg" alt="Eugenia Azevedo Salomao foto">
-                </a>
-              </picture>
+              <a href="img/bio/Bio_@2x.jpg" data-lightbox="Bio_@2x.jpg">
+                <img srcset="img/bio/Bio_@1x.jpg 767w" src="img/bio/Bio_@2x.jpg" sizes="(max-width: 767px) 767px" alt="Eugenia Azevedo Salomao foto">
+              </a>
+            </div>
+          </div>
+          <div class="button-container2">
+            <div class="center-button">
+              <a href="files/CV.pdf" target="_blank" class="primary-button">Descargar CV</a>
             </div>
           </div>
           <div>
@@ -385,7 +387,7 @@
       </picture>
       <div class="hero-text">
         <h1>Ponte en contacto</h1>
-        <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel: +524435285057">+524435285057.</a></p>
+        <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel:+524435285057">+524435285057.</a></p>
         <div class="button-container2">
           <div class="center-button">
             <a href="mailto:eazevedosa@yahoo.com.mx" target="_blank" class="primary-button">Mandar email</a>
